# cloc.info

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  rust-toolchain
.github/workflows/: docker-image.yml  rust.yml
frontend/: her.txt  package-lock.json  package.json  scanner.py  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1716019732885-f5b3704e308d4.mjs
frontend/public/: home-about.html  sw.js
frontend/src/components/: footer.liquid  footer.pug  head.pug  index.html  info.html  meta.liquid  meta.pug  nav.html  upload.html
frontend/src/data/: main.json
frontend/src/js/: api.js  common.js  git_url_parser.js  home_styles.js  index.js  info.js  later.js  tailwind-classes.js  upload.js
frontend/src/layouts/: main.liquid  main.pug
frontend/src/pages/: 404.pug  index.liquid  index.pug  info.liquid  info.pug  upload.liquid  upload.pug
frontend/src/styles/: index.css  main.css  main.scss
schema/: cloc.sql
src/: application.rs  cloner.rs  github.rs  github_service.rs  handlers.rs  lib.rs  main.rs  server.rs  service.rs  statistic.rs  websocket.rs
src/handlers/: github.rs  gitlab.rs  mod.rs
src/logic/: cloner.rs  git.rs  info.rs  mod.rs  repository.rs
src/providers/: git.rs  git_provider.rs  github.rs  github_provider.rs  mod.rs  repository_provider.rs
src/repository/: cache.rs  downloader.rs  info.rs  mod.rs  storage_cache.rs  utils.rs
static/: 404.html  about.txt  api.js  common.js  git_url_parser.js  index.css  index.html  index.js  info.html  info.js  later.js  robot.txt  site.webmanifest  sitemap.xml  sw.js  upload.html  upload.js
