[package]
name = "cloc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net", "process", "signal" ]}
futures-util = {version = "0.3.21"}
axum = { version =  "0.5", features = ["ws"] }
axum-extra = { version = "0.3.6", features = ["spa"] }
hyper = "0.14"
structopt = "0.3"
mime_guess = "2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
snafu = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
fs_extra = "1"
tempfile = { path = "../tempfile" }
ordered-multimap = "0.4.3"
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
hyper-openssl = "0.9"
axum-server = "0.4"
retainer = "0.3"
scopeguard = "1"
chrono = "0.4"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.