[package]
name = "cloc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "time", "fs", "macros", "net", "process", "signal" ]}
futures-util = {version = "0.3.21"}
axum = { version =  "0.6", features = ["ws", "headers", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
bytes = "1"
snafu = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
#tempfile = { path = "../tempfile" }
tempfile = "3"
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
retainer = "0.3"
scopeguard = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tokio-util = "0.7"
rand = "0.8"

[profile.release]
lto = true
opt-level = 3  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
